--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-config": "^1.4.5",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
